<resources>
    <string name="app_name">Planets Quiz</string>
    <string name="mercury">Mercury</string>
    <string name="venus">Venus</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="jupiter">Jupiter</string>
    <string name="saturn">Saturn</string>
    <string name="uranus">Uranus</string>
    <string name="neptune">Neptune</string>
    <string name="question1">Q1: Which planets have rings?</string>
    <string name="question2">Q2: What is the largest planet in our solar system?</string>
    <string name="question3">Q3: What is the smallest planet in our solar system?</string>
    <string name="question4">Q4: Which planets are gas giants?</string>
    <string name="question5">Q5: What is the largest moon in our solar system?</string>
    <string name="question6">Q6: How many planets are in our solar system?</string>
    <string name="question7">Q7: What is the hottest planet in our solar system?</string>
    <string name="question8">Q8: Jupiter has more moons than any other planet in our solar system. How many does it have?</string>
    <string name="titan">Titan</string>
    <string name="ganymede">Ganymede</string>
    <string name="europa">Europa</string>
    <string name="hyperion">Hyperion</string>
    <string name="question_6_hint">Current number of planets</string>
    <string name="q8_ans1">62</string>
    <string name="q8_ans2">73</string>
    <string name="q8_ans3">69</string>
    <string name="q8_ans4">27</string>
    <string name="submit_answers">submit answers</string>
    <string name="username_hint">Name</string>
    <string name="start_button">start</string>
</resources>